--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             @naturalbungalov</a></p>
 
 
-          <p><i class="fa-solid fa-phone"></i> <a href="#">Telefon Numarası : 0539 343 41 67 </a></p>
+          <p><i class="fa-solid fa-phone"></i> Telefon Numarası : 0539 343 41 67 </p>
 
           <p><i class="fa-solid fa-location-dot"></i> Adres : Sırapınar Mahallesi Gülümser Sokak No:16 Çekmeköy/İstanbul
           </p>
